--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exploratory data analysis as part of my MSc thesis, \"Using machine learning to predict Transport for London bike sharing habits in the post COVID-19 era\"."
+    "#### Data prep as part of my MSc thesis, \"Using machine learning to analyse and predict Transport for London bike sharing habits in the post COVID-19 era\"."
    ]
   },
   {
