--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "[1100819 rows x 12 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -470,6 +470,80 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating a heatmap using the July data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Int64Index' object has no attribute 'date'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[89], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m hourly_counts[\u001b[39m'\u001b[39m\u001b[39mCountsPerHour\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m hourly_counts\u001b[39m.\u001b[39mgroupby(pd\u001b[39m.\u001b[39mGrouper(key\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mStart Date Time\u001b[39m\u001b[39m'\u001b[39m, freq\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m1H\u001b[39m\u001b[39m'\u001b[39m))[\u001b[39m'\u001b[39m\u001b[39mHour\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mtransform(\u001b[39m'\u001b[39m\u001b[39mcount\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[39m# create a pivot table of the daily bike rental counts\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m counts_pivot \u001b[39m=\u001b[39m hourly_counts\u001b[39m.\u001b[39mpivot_table(values\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mCountsPerHour\u001b[39m\u001b[39m'\u001b[39m, index\u001b[39m=\u001b[39mhourly_counts\u001b[39m.\u001b[39;49mindex\u001b[39m.\u001b[39;49mdate, columns\u001b[39m=\u001b[39mhourly_counts\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39mhour)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Int64Index' object has no attribute 'date'"
+     ]
+    }
+   ],
+   "source": [
+    "# creating a copy of the data\n",
+    "hourly_counts = bd_Jul_2019.copy()\n",
+    "\n",
+    "# group data by date and hour and calculate the total count for each hour\n",
+    "hourly_counts['CountsPerHour'] = hourly_counts.groupby(pd.Grouper(key='Start Date Time', freq='1H'))['Hour'].transform('count')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Int64Index' object has no attribute 'date'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[90], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# create a pivot table of the hourly bike rental counts\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m counts_pivot \u001b[39m=\u001b[39m hourly_counts\u001b[39m.\u001b[39mpivot_table(values\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mCountsPerHour\u001b[39m\u001b[39m'\u001b[39m, index\u001b[39m=\u001b[39mhourly_counts\u001b[39m.\u001b[39;49mindex\u001b[39m.\u001b[39;49mdate, columns\u001b[39m=\u001b[39mhourly_counts\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39mhour)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Int64Index' object has no attribute 'date'"
+     ]
+    }
+   ],
+   "source": [
+    "# create a pivot table of the hourly bike rental counts\n",
+    "counts_pivot = hourly_counts.pivot_table(values='CountsPerHour', index=hourly_counts.index.date, columns=hourly_counts.index.hour)\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -479,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +562,7 @@
        "(38871, 12)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,14 +570,14 @@
    "source": [
     "target_day = pd.Timestamp(year=2019, month=7, day=1)\n",
     "#BD_2019_07_01 = bike_data_2019[(bike_data_2019['Start Date Time'].dt.date == '2019-07-01'.date())]\n",
-    "BD_2019_07_01 = bike_data_2019[bike_data_2019['Start Date Time'].dt.date == target_day.date()]\n",
-    "BD_2019_07_01.head(5)\n",
-    "BD_2019_07_01.shape"
+    "bd_2019_07_01 = bike_data_2019[bike_data_2019['Start Date Time'].dt.date == target_day.date()]\n",
+    "bd_2019_07_01.head(5)\n",
+    "bd_2019_07_01.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +586,7 @@
        "<Axes: xlabel='Hour', ylabel='frequency'>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -534,12 +608,12 @@
     "\n",
     "# group the DataFrame by the Hour column and use the size() method to count the frequency of each value. \n",
     "# We reset the index and rename the resulting column to frequency to create a new DataFrame that contains two columns: value and frequency.\n",
-    "sns.lineplot(x=\"Hour\", y='frequency', data=BD_2019_07_01.groupby('Hour').size().reset_index(name='frequency'))"
+    "sns.lineplot(x=\"Hour\", y='frequency', data=bd_2019_07_01.groupby('Hour').size().reset_index(name='frequency'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +637,7 @@
    ],
    "source": [
     "# counting by start location in 2019\n",
-    "print(BD_2019_07_01['StartStation Name'].value_counts())"
+    "print(bd_2019_07_01['StartStation Name'].value_counts())"
    ]
   },
   {
