removing duplicates from 2022 matrix

--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -17189,7 +17189,51 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Identifying and removing duplicate columsn from the 2022 matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = events_final_2022.columns.tolist()\n",
+    "duplicate_columns = set([col for col in columns if columns.count(col) > 1])\n",
+    "duplicate_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "duplicate_stations = ['Blythe Road, Olympia', 'Clifford Street, Mayfair', 'Exhibition Road Museums 2, South Kensington', 'Portugal Street, Holborn']\n",
+    "duplicates = events_final_2022.loc[:, events_final_2022.columns.get_level_values(0).isin(duplicate_stations)]\n",
+    "events_2022_filtered = events_final_2022.loc[:, ~events_final_2022.columns.get_level_values(0).isin(duplicate_stations)]\n",
+    "\n",
+    "# combine the values in consecutive pairs of columns\n",
+    "duplicates_cleaned = pd.DataFrame()\n",
+    "columns = duplicates.columns\n",
+    "\n",
+    "for i in range(0, len(columns), 2):\n",
+    "    duplicates_cleaned[columns[i]] = duplicates.iloc[:, i] + duplicates.iloc[:, i+1]\n",
+    "\n",
+    "#renaming columns \n",
+    "columns = pd.MultiIndex.from_tuples([('Blythe Road, Olympia', 'Arrivals'), ('Blythe Road, Olympia', 'Departures'),\n",
+    "                                     ('Clifford Street, Mayfair', 'Arrivals'), ('Clifford Street, Mayfair', 'Departures'), \n",
+    "                                     ('Exhibition Road Museums 2, South Kensington', 'Arrivals'), ('Exhibition Road Museums 2, South Kensington', 'Departures'),  \n",
+    "                                     ('Portugal Street, Holborn', 'Arrivals'), ('Portugal Street, Holborn', 'Departures')])\n",
+    "\n",
+    "\n",
+    "# Assign the MultiIndex to the DataFrame columns\n",
+    "duplicates_cleaned.columns = columns\n",
+    "\n",
+    "events_2022_join = events_2022_filtered.merge(duplicates_cleaned, left_index=True, right_index=True)\n",
+    "\n"
+   ]
   },
   {
    "attachments": {},
@@ -17270,7 +17314,7 @@
    "outputs": [],
    "source": [
     "events_path_2022 = Path(\"data/events_2022.p\")\n",
-    "events_final_2022.to_pickle(events_path_2022)\n",
+    "events_2022_join.to_pickle(events_path_2022)\n",
     "\n"
    ]
   },
