matrix 2022 into alphabetical order

--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -17232,6 +17232,9 @@
     "duplicates_cleaned.columns = columns\n",
     "\n",
     "events_2022_join = events_2022_filtered.merge(duplicates_cleaned, left_index=True, right_index=True)\n",
+    "\n",
+    "# sorting in alphabetical order\n",
+    "events_2022_join = events_2022_join.sort_index(axis=1, level=0)\n",
     "\n"
    ]
   },
