--- a/analysis_lstm.ipynb
+++ b/analysis_lstm.ipynb
@@ -303,7 +303,7 @@
     "    for index, row in docking_station_df.iterrows():\n",
     "        # Check if it's a working day and the hour is in the specified working hours\n",
     "        #if row['Working_day'] == 1 and row['Hour'] in [7, 8, 9, 16, 17, 18]:\n",
-    "        if row['Working_day'] == 1 and row['Hour'] in [8, 9, 10, 17, 18, 19]:\n",
+    "        if row['Working_day'] == 1 and row['Hour'] in [8, 9, 10, 17, 18, 19]: #daily hours are from 0-23. Events dataframe is round to the near hour. Therfore hours 8, 9, 10, 17, 18, 19 represent 07:30-9:30 and 16:30-6:30 in real time.\n",
     "        \n",
     "            # Set the value of \"commuter_hour\" to 1\n",
     "            docking_station_df.loc[index, 'Commuter_hour'] = 1\n",
