updating kepler gl plot

--- a/analysis_networkx.ipynb
+++ b/analysis_networkx.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,14 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\EMoses\\AppData\\Local\\Temp\\ipykernel_8928\\2147572732.py:15: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\EMoses\\AppData\\Local\\Temp\\ipykernel_12196\\668398512.py:15: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(sql_query, conn)\n"
      ]
     }
@@ -85,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\EMoses\\AppData\\Local\\Temp\\ipykernel_8928\\3612906293.py:3: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\EMoses\\AppData\\Local\\Temp\\ipykernel_12196\\3612906293.py:3: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df3 = pd.read_sql(sql_query3, conn)\n"
      ]
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
        "4         Sedding Street, Sloane Square   5  51.493130 -0.156876"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18746,7 +18746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18754,13 +18754,12 @@
     "import geopandas as gpd\n",
     "from shapely.geometry import Point\n",
     "from keplergl import KeplerGl\n",
-    "from pyproj import CRS\n",
-    "import keplergl"
+    "from pyproj import CRS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18775,7 +18774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -18918,7 +18917,7 @@
        "[11466652 rows x 4 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18929,7 +18928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -19021,7 +19020,7 @@
        "4  POINT (-0.15688 51.49313)  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19044,7 +19043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -19079,7 +19078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19091,7 +19090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -19246,7 +19245,7 @@
        "[798 rows x 5 columns]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19257,7 +19256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -19284,7 +19283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -19427,7 +19426,7 @@
        "[11466652 rows x 4 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19438,7 +19437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -19536,7 +19535,7 @@
        "4          Black Prince Road, Vauxhall            310.0            NaN  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19552,7 +19551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19566,7 +19565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -19892,7 +19891,7 @@
        "[11466656 rows x 16 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19903,7 +19902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -20038,7 +20037,7 @@
        "4   -0.170983   51.486892   -0.116912   51.490868  POINT (-0.17098 51.48689)  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20062,7 +20061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -20216,7 +20215,7 @@
        "4  (529, 310)   393708  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20258,14 +20257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\EMoses\\AppData\\Local\\Temp\\ipykernel_8928\\3993817635.py:19: FutureWarning: You are adding a column named 'geometry' to a GeoDataFrame constructed without an active geometry column. Currently, this automatically sets the active geometry column to 'geometry' but in the future that will no longer happen. Instead, either provide geometry to the GeoDataFrame constructor (GeoDataFrame(... geometry=GeoSeries()) or use `set_geometry('geometry')` to explicitly set the active geometry column.\n",
+      "C:\\Users\\EMoses\\AppData\\Local\\Temp\\ipykernel_12196\\3993817635.py:19: FutureWarning: You are adding a column named 'geometry' to a GeoDataFrame constructed without an active geometry column. Currently, this automatically sets the active geometry column to 'geometry' but in the future that will no longer happen. Instead, either provide geometry to the GeoDataFrame constructor (GeoDataFrame(... geometry=GeoSeries()) or use `set_geometry('geometry')` to explicitly set the active geometry column.\n",
       "  movers[\"geometry\"] = [Point(originx, originy) for originx, originy in zip(movers[\"lon_origin\"].to_list(),\n"
      ]
     },
@@ -20401,7 +20400,7 @@
        "234906   -0.116912   51.490868  POINT (-0.11691 51.49087)  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20433,7 +20432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20445,7 +20444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -20624,7 +20623,7 @@
        "[428955 rows x 7 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20635,7 +20634,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>route_id</th>\n",
+       "      <th>movers</th>\n",
+       "      <th>lon_origin</th>\n",
+       "      <th>lat_origin</th>\n",
+       "      <th>lon_destin</th>\n",
+       "      <th>lat_destin</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>403495</th>\n",
+       "      <td>403495.0</td>\n",
+       "      <td>1594.0</td>\n",
+       "      <td>-0.142844</td>\n",
+       "      <td>51.506613</td>\n",
+       "      <td>-0.142844</td>\n",
+       "      <td>51.506613</td>\n",
+       "      <td>POINT (-0.1428440000000000 51.5066130000000015)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>268524</th>\n",
+       "      <td>268524.0</td>\n",
+       "      <td>1197.0</td>\n",
+       "      <td>-0.173881</td>\n",
+       "      <td>51.494412</td>\n",
+       "      <td>-0.174554</td>\n",
+       "      <td>51.499917</td>\n",
+       "      <td>POINT (-0.1738810000000000 51.4944119999999970)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>316404</th>\n",
+       "      <td>316404.0</td>\n",
+       "      <td>1205.0</td>\n",
+       "      <td>-0.174554</td>\n",
+       "      <td>51.499917</td>\n",
+       "      <td>-0.174554</td>\n",
+       "      <td>51.499917</td>\n",
+       "      <td>POINT (-0.1745540000000000 51.4999170000000035)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201492</th>\n",
+       "      <td>201492.0</td>\n",
+       "      <td>1447.0</td>\n",
+       "      <td>-0.169249</td>\n",
+       "      <td>51.515953</td>\n",
+       "      <td>-0.174554</td>\n",
+       "      <td>51.499917</td>\n",
+       "      <td>POINT (-0.1692493750000000 51.5159534399999970)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>530466</th>\n",
+       "      <td>530466.0</td>\n",
+       "      <td>1891.0</td>\n",
+       "      <td>-0.215087</td>\n",
+       "      <td>51.490218</td>\n",
+       "      <td>-0.214428</td>\n",
+       "      <td>51.486062</td>\n",
+       "      <td>POINT (-0.2150870920000000 51.4902176200000028)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>588869</th>\n",
+       "      <td>588869.0</td>\n",
+       "      <td>2626.0</td>\n",
+       "      <td>-0.021630</td>\n",
+       "      <td>51.540312</td>\n",
+       "      <td>-0.004810</td>\n",
+       "      <td>51.541793</td>\n",
+       "      <td>POINT (-0.0216303590000000 51.5403115000000014)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>593657</th>\n",
+       "      <td>593657.0</td>\n",
+       "      <td>1291.0</td>\n",
+       "      <td>-0.004810</td>\n",
+       "      <td>51.541793</td>\n",
+       "      <td>-0.004810</td>\n",
+       "      <td>51.541793</td>\n",
+       "      <td>POINT (-0.0048100000000000 51.5417929999999984)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>365149</th>\n",
+       "      <td>365149.0</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>-0.032267</td>\n",
+       "      <td>51.525501</td>\n",
+       "      <td>-0.021345</td>\n",
+       "      <td>51.519265</td>\n",
+       "      <td>POINT (-0.0322672040000000 51.5255009999999984)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35535</th>\n",
+       "      <td>35535.0</td>\n",
+       "      <td>2243.0</td>\n",
+       "      <td>-0.066910</td>\n",
+       "      <td>51.507131</td>\n",
+       "      <td>-0.057544</td>\n",
+       "      <td>51.504749</td>\n",
+       "      <td>POINT (-0.0669100000000000 51.5071310000000011)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>346847</th>\n",
+       "      <td>346847.0</td>\n",
+       "      <td>1028.0</td>\n",
+       "      <td>-0.020467</td>\n",
+       "      <td>51.513757</td>\n",
+       "      <td>-0.016460</td>\n",
+       "      <td>51.505772</td>\n",
+       "      <td>POINT (-0.0204670000000000 51.5137569999999982)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>174 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        route_id  movers  lon_origin  lat_origin  lon_destin  lat_destin  \\\n",
+       "403495  403495.0  1594.0   -0.142844   51.506613   -0.142844   51.506613   \n",
+       "268524  268524.0  1197.0   -0.173881   51.494412   -0.174554   51.499917   \n",
+       "316404  316404.0  1205.0   -0.174554   51.499917   -0.174554   51.499917   \n",
+       "201492  201492.0  1447.0   -0.169249   51.515953   -0.174554   51.499917   \n",
+       "530466  530466.0  1891.0   -0.215087   51.490218   -0.214428   51.486062   \n",
+       "...          ...     ...         ...         ...         ...         ...   \n",
+       "588869  588869.0  2626.0   -0.021630   51.540312   -0.004810   51.541793   \n",
+       "593657  593657.0  1291.0   -0.004810   51.541793   -0.004810   51.541793   \n",
+       "365149  365149.0  1987.0   -0.032267   51.525501   -0.021345   51.519265   \n",
+       "35535    35535.0  2243.0   -0.066910   51.507131   -0.057544   51.504749   \n",
+       "346847  346847.0  1028.0   -0.020467   51.513757   -0.016460   51.505772   \n",
+       "\n",
+       "                                               geometry  \n",
+       "403495  POINT (-0.1428440000000000 51.5066130000000015)  \n",
+       "268524  POINT (-0.1738810000000000 51.4944119999999970)  \n",
+       "316404  POINT (-0.1745540000000000 51.4999170000000035)  \n",
+       "201492  POINT (-0.1692493750000000 51.5159534399999970)  \n",
+       "530466  POINT (-0.2150870920000000 51.4902176200000028)  \n",
+       "...                                                 ...  \n",
+       "588869  POINT (-0.0216303590000000 51.5403115000000014)  \n",
+       "593657  POINT (-0.0048100000000000 51.5417929999999984)  \n",
+       "365149  POINT (-0.0322672040000000 51.5255009999999984)  \n",
+       "35535   POINT (-0.0669100000000000 51.5071310000000011)  \n",
+       "346847  POINT (-0.0204670000000000 51.5137569999999982)  \n",
+       "\n",
+       "[174 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assuming your DataFrame is named \"df\"\n",
+    "movers_clean_1000 = movers_clean[movers_clean['movers'] > 1000]\n",
+    "movers_clean_1000 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -20648,9 +20839,33 @@
    ],
    "source": [
     "# Create KeplerGl instance\n",
-    "m = KeplerGl(height=600)\n",
+    "m = KeplerGl(height=800)\n",
     "# Add stop duration\n",
-    "m.add_data(movers, 'agg movements')"
+    "m.add_data(filtered_df, 'agg movements')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d4e14e0229c848f293d080a015ae5292",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KeplerGl(data={'agg movements': {'index': [403495, 268524, 316404, 201492, 530466, 437687, 554492, 555304, 543…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "m"
    ]
   },
   {
@@ -20658,9 +20873,67 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "m"
+    "saving keplet plots as html"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n",
+      "Map saved to output\\kepler_plot_2022.html!\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = KeplerGl(\n",
+    "    height=600,\n",
+    "    data={'agg movements' : movers_clean})\n",
+    "\n",
+    "\n",
+    "m.save_to_html(file_name=\"output\\kepler_plot_2022.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n",
+      "Map saved to output\\kepler_plot_2022_1000+.html!\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = KeplerGl(\n",
+    "    height=600,\n",
+    "    data={'agg movements' : movers_clean_1000})\n",
+    "\n",
+    "\n",
+    "m.save_to_html(file_name=\"output\\kepler_plot_2022_1000+.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -20681,6 +20954,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "---\n",
+    "---\n",
     "---"
    ]
   },
